--- a/public/main_page.html
+++ b/public/main_page.html
@@ -400,14 +400,21 @@
     let filePreview = "";
 
     if (["jpg", "jpeg", "png", "gif", "bmp", "webp"].includes(ext)) {
-      filePreview = `<img src="${item.fileURL}" alt="${item.name}" style="max-width: 100px; max-height: 100px; margin-top: 10px;">`;
-    } else if (ext === "pdf") {
-      filePreview = `<iframe src="${item.fileURL}" width="100" height="100" style="margin-top: 10px;"></iframe>`;
-    } else if (["ppt", "pptx", "doc", "docx"].includes(ext)) {
-      filePreview = `<iframe src="https://view.officeapps.live.com/op/embed.aspx?src=${encodeURIComponent(item.fileURL)}" width="100" height="100" style="margin-top: 10px;"></iframe>`;
-    } else {
-      filePreview = `<a href="${item.fileURL}" download>📥 Download</a>`;
-    }
+  filePreview = `
+    <img src="${item.fileURL}" alt="${item.name}" style="max-width: 100px; max-height: 100px; margin-top: 10px;">
+    <br><a href="${item.fileURL}" download>📥 Download</a>`;
+} else if (ext === "pdf") {
+  filePreview = `
+    <iframe src="${item.fileURL}" width="100" height="100" style="margin-top: 10px;"></iframe>
+    <br><a href="${item.fileURL}" download>📥 Download</a>`;
+} else if (["ppt", "pptx", "doc", "docx"].includes(ext)) {
+  filePreview = `
+    <iframe src="https://view.officeapps.live.com/op/embed.aspx?src=${encodeURIComponent(item.fileURL)}" width="100" height="100" style="margin-top: 10px;"></iframe>
+    <br><a href="${item.fileURL}" download>📥 Download</a>`;
+} else {
+  filePreview = `<a href="${item.fileURL}" download>📥 Download</a>`;
+}
+
 
     const div = document.createElement("div");
     div.style.cssText = "background: #fff; border-radius: 10px; padding: 15px; margin-bottom: 15px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); display: flex; justify-content: space-between; align-items: center;";
