Revert "fixed main UI"

--- a/public/Q&A_page.html
+++ b/public/Q&A_page.html
@@ -176,8 +176,8 @@
                     newAnswer.innerHTML = `
                         <p>${answerText}</p>
                         <div class="vote-buttons">
-                            <button class="upvote">↑</button>
-                            <button class="downvote">↓</button>
+                            <button class="upvote">Upvote</button>
+                            <button class="downvote">Downvote</button>
                             <span class="vote-count">0</span>
                         </div>
                     `;
