--- a/public/Q&A_page.html
+++ b/public/Q&A_page.html
@@ -123,7 +123,13 @@
 <body>
 
 <div class="container">
-    <h1>Q&A Forum</h1>
+
+    <a id="back-link" style="display: inline-block; margin: 20px; font-weight: bold; text-decoration: none; background-color: #1f497d; color: white; padding: 10px 15px; border-radius: 5px;">← Back to Home</a>
+
+    <h1 id="group-title"></h1>
+
+   
+    
 
     <!-- Question Submission Form -->
     <div class="question-form">
@@ -143,6 +149,8 @@
 </div>
 
 <script>
+
+
     document.getElementById('questionForm').addEventListener('submit', function(event) {
         event.preventDefault();
         const questionInput = document.getElementById('questionInput');
@@ -229,6 +237,22 @@
             });
         }
     });
+
+
+    const params = new URLSearchParams(window.location.search);
+    const groupId = params.get("group");
+
+    if (groupId) {
+        document.getElementById("back-link").href = `/main?group=${groupId}`;
+
+        fetch(`/api/group/${groupId}`)
+        .then(res => res.json())
+        .then(data => {
+            if (data.name) {
+            document.getElementById("group-title").textContent = `${data.name} Discussion Board`;
+            }
+        });
+    }
 </script>
 
 </body>
