--- a/public/scheduling.html
+++ b/public/scheduling.html
@@ -173,8 +173,9 @@
     </style>
 </head>
 <body>
-    <a href="/main" style="display: inline-block; margin: 20px; font-weight: bold; text-decoration: none; background-color: #1f497d; color: white; padding: 10px 15px; border-radius: 5px;">← Back to Home</a>
+    <a id="back-link" style="display: inline-block; margin: 20px; font-weight: bold; text-decoration: none; background-color: #1f497d; color: white; padding: 10px 15px; border-radius: 5px;">← Back to Home</a>
 
+    <h1 id="group-title" style="text-align: center;"></h1>
     <div class="container">
         <div class="sidebar">
             <h2>Add Yourself</h2>
@@ -373,6 +374,27 @@
             } else {
                 infoContent.textContent = "No one is available.";
             }
+        }
+
+        function getGroupIdFromUrl() {
+            const params = new URLSearchParams(window.location.search);
+            return params.get('group');
+        }
+
+
+        const params = new URLSearchParams(window.location.search);
+        const groupId = params.get("group");
+
+        if (groupId) {
+            document.getElementById("back-link").href = `/main?group=${groupId}`;
+
+            fetch(`/api/group/${groupId}`)
+            .then(res => res.json())
+            .then(data => {
+                if (data.name) {
+                document.getElementById("group-title").textContent = `${data.name} Study Times`;
+                }
+            });
         }
     </script>
     
