--- a/public/main_page.html
+++ b/public/main_page.html
@@ -242,17 +242,14 @@
   <div class="overlay" id="uploadOverlay"></div>
 
   <script>
-    function getGroupIdFromUrl() {
-      const params = new URLSearchParams(window.location.search);
-      return params.get("group");
-    }
 
     
+    // (Backend) Data Structure to store information on each group -----------------------
+    // (basically whats stored in the study_groups postgreSQL database)
+    let groupMap = {}; // { groupId: { name: "", join_code: "", resources: [] } }
+    // ------------------------------------------------------------------------------------
 
 
-
-
-    let groupMap = {}; // { groupId: { name, join_code, resources: [] } }
     let currentGroupId = null;
     let selectedContentType = "";
 
@@ -291,11 +288,16 @@
       if (!groupName) return alert("Please enter a group name.");
 
       const join_code = generateGroupCode();
+
+      // DATABASE: (Backend) -------------------------------------------------
+      // Sending postgre SQL database information on the new group created
       const res = await fetch('/api/groups', {
         method: 'POST', headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ name: groupName, join_code })
       });
       const data = await res.json();
+
+      // adding new group to our current webpage / map
       if (res.ok) {
         groupMap[data.id] = { name: data.name, join_code: data.join_code, resources: [] };
         currentGroupId = data.id;
@@ -307,16 +309,21 @@
       } else {
         alert(data.error || "Error creating group.");
       }
+      // -----------------------------------------------------------------------
     }
 
     async function joinGroup() {
       const groupCode = document.getElementById("group-code").value.trim().toUpperCase();
+
+      // DATABASE: (Backend) -------------------------------------------------
+      // Sending the join code to SQL database
       const res = await fetch('/api/join', {
         method: 'POST', headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ join_code: groupCode })
       });
       const data = await res.json();
       if (res.ok) {
+        // Checking if the join code is of a valid group, adding it to our current webpage / map if valid
         if (!groupMap[data.id]) {
           groupMap[data.id] = { name: data.name, join_code: groupCode, resources: [] };
         }
@@ -329,21 +336,31 @@
       } else {
         alert("Invalid group code.");
       }
+      // -----------------------------------------------------------------------
     }
 
     async function loadGroups() {
+      // DATABASE: (Backend)
+      // Get the groups' data / information from the postgre SQL database
       const res = await fetch('/api/groups');
       const data = await res.json();
+
+      // populate groupMap data structure
       groupMap = {};
       data.forEach(g => {
         groupMap[g.id] = { name: g.name, join_code: g.join_code, resources: [] };
       });
 
-      const groupIdFromUrl = getGroupIdFromUrl();
+      // ROUTING: (Backend) -----------------------------------------------------------------
+      // Get the group Id from the URL and check if it is valid
+      const params = new URLSearchParams(window.location.search);
+      const groupIdFromUrl = params.get("group");
       const validGroupId = groupIdFromUrl && groupMap[groupIdFromUrl] ? groupIdFromUrl : Object.keys(groupMap)[0];
 
+      // If valid, set variables, update UI and groups
       if (validGroupId) {
         currentGroupId = validGroupId;
+      // ------------------------------------------------------------------------------------
         updateUIVisibility();
         renderGroups();
         setActiveGroup(currentGroupId);
@@ -375,9 +392,10 @@
       updateUIVisibility();
 
   
-
+      // ROUTING (Backend): Adding the group id to the qa and schedule URL ------------------
       document.getElementById("discussion-tab").href = `/qa?group=${groupId}`;
       document.getElementById("schedule-tab").href = `/schedule?group=${groupId}`;
+      // ------------------------------------------------------------------------------------
     }
 
     
@@ -444,6 +462,7 @@
       const uploadData = await uploadRes.json();
       const serverFileName = uploadData.filename;
 
+      // (Backend) update resources info in groupMap -------------------
       groupMap[currentGroupId].resources.push({
         name: title,
         fileName: serverFileName,
@@ -451,6 +470,7 @@
         likes: 0,
         hearts: 0
       });
+      // ------------------------------------------------------------------
 
 
       document.getElementById("upload-title").value = "";
@@ -463,7 +483,8 @@
 
 
     function reactToContent(index, type) {
-      if (groupMap[currentGroupId] && groupMap[currentGroupId].resources[index]) {
+      // I think this is why the upvotes were messed up, they used the groupMap
+      if (groupMap[currentGroupId] && groupMap[currentGroupId].resources[index]) { 
         groupMap[currentGroupId].resources[index][type]++;
         renderResources(currentGroupId);
       }
