--- a/public/main_page.html
+++ b/public/main_page.html
@@ -95,6 +95,7 @@
       grid-template-columns: repeat(3, 200px);
       gap: 20px;
       margin-top: 20px;
+      margin-right: 20px;
     }
     .resource-item {
       background: #e0e0e0;
@@ -529,7 +530,65 @@
     }
 
     document.getElementById("uploadOverlay").addEventListener("click", closeModals);
-    window.onload = loadGroups;
+
+
+    async function runTests() {
+      console.log("=== Running PeerSphere Tests ===");
+
+      // Test 1: Add Group
+      const testGroupName = "Test Group";
+      document.getElementById("group-name").value = testGroupName;
+      await addGroup();
+      const groupNames = Object.values(groupMap).map(g => g.name);
+      console.assert(groupNames.includes(testGroupName), "Test 1 Failed: Group was not added.");
+      console.log("Test 1 Passed: Group added");
+
+      // Test 2: Upload Content (mocked, no real server)
+      const title = "Test Upload";
+      const dummyFile = new File(["dummy data"], "example.pdf", { type: "application/pdf" });
+      document.getElementById("upload-title").value = title;
+      const uploadInput = document.getElementById("upload-file");
+      Object.defineProperty(uploadInput, 'files', {
+        value: [dummyFile],
+        writable: false,
+      });
+      selectedContentType = "PDF";
+
+      // Instead of real uploadContent, simulate it manually:
+      groupMap[currentGroupId].resources.push({
+        name: title,
+        fileName: dummyFile.name,
+        type: selectedContentType,
+        likes: 0,
+        hearts: 0
+      });
+
+      renderResources(currentGroupId);
+
+      const uploadedContent = groupMap[currentGroupId].resources;
+      console.assert(uploadedContent.length > 0, "Test 2 Failed: Content not uploaded.");
+      console.log("Test 2 Passed: Content uploaded");
+
+      // Test 3: React to Content
+      const previousLikes = uploadedContent[0].likes;
+      reactToContent(0, "likes");
+      console.assert(uploadedContent[0].likes === previousLikes + 1, "Test 3 Failed: Like not registered.");
+      console.log("Test 3 Passed: Like registered");
+
+      console.log("✅ All tests completed.");
+    }
+
+
+
+    window.onload = async () => {
+      await loadGroups();
+      
+      const params = new URLSearchParams(window.location.search);
+      if (params.get("test") === "true") {
+        runTests();
+      }
+    };
+
     
   </script>
 </body>
