--- a/public/scheduling.html
+++ b/public/scheduling.html
@@ -113,13 +113,6 @@
             margin-top: 10px;
         }
 
-        .user-item {
-            cursor: pointer;
-            margin: 10px 0;
-            margin-bottom: 5px;
-            padding: 2px;
-        }
-
         .input-group {
             display: flex;
             flex-direction: column;
@@ -170,6 +163,23 @@
             margin-bottom: 1px;
             padding: 5px;
         }
+
+        .user-item {
+            cursor: pointer;
+            margin: 10px 0;
+            margin-bottom: 5px;
+            padding: 5px 8px;
+            border-radius: 8px;
+            transition: background-color 0.3s, box-shadow 0.3s, border 0.3s;
+        }
+
+        .user-item.selected {
+            background-color: var(--selected-color, #dbe2ef);
+            box-shadow: 0 0 10px var(--selected-color, #dbe2ef);
+            border: 1px solid var(--selected-color, #dbe2ef);
+        }
+
+
     </style>
 </head>
 <body>
@@ -183,7 +193,7 @@
                 <label>Name: <input id="name" type="text"></label>
                 <label>Color: <input id="color" type="color"></label>
                 <button onclick="addUser()">Add</button>
-                <!-- <button onclick="saveAvailability()">Save Availability</button> -->
+                <div id="saveStatus" style="margin-top:10px; font-size:14px; color: green;"></div>
             </div>
             <div id="colorError" class="error"></div>
             <h3>People</h3>
@@ -330,19 +340,38 @@
         function updateUserList() {
             const userList = document.getElementById("userList");
             userList.innerHTML = "";
+
             users.forEach(user => {
                 const div = document.createElement("div");
                 div.className = "user-item";
                 div.textContent = user.name;
                 div.style.color = user.color;
+                div.setAttribute("data-color", user.color); // <-- save color in HTML
                 div.onclick = () => {
+                    if (currentUser && currentUser.name === user.name) {
+                        return;
+                    }
+
+                    document.querySelectorAll('.user-item').forEach(item => {
+                        item.classList.remove('selected');
+                        item.style.setProperty('--selected-color', '');
+                    });
+
                     currentUser = user;
+                    div.classList.add('selected');
+                    const lightColor = user.color + "33";  // 33 = about 20% opacity
+                    div.style.setProperty('--selected-color', lightColor);
+
+
                     document.getElementById("name").value = user.name;
                     document.getElementById("color").value = user.color;
                 };
+
+
                 userList.appendChild(div);
             });
         }
+
 
         function markAvailability(cell) {
             if (!currentUser) return alert("Add yourself or select a user first!");
@@ -418,49 +447,69 @@
         }
 
         function saveAvailability() {
-            if (!currentUser) {
-                alert("Add yourself or select a user first!");
-                return;
-            }
-
             const groupId = getGroupIdFromUrl();
-            const username = currentUser.name;
-            const color = currentUser.color;
-            const slots = [];
+            const payload = [];
 
-            document.querySelectorAll('.time-slot').forEach(cell => {
-                const users = cell.dataset.users.split("\n").filter(name => name.trim() !== "");
-                if (users.includes(username)) {
-                    slots.push({
-                        day: cell.getAttribute('data-day'),
-                        hour: parseInt(cell.getAttribute('data-hour'), 10)
-                    });
-                }
+            users.forEach(user => {
+                const username = user.name;
+                const color = user.color;
+                const slots = [];
+
+                document.querySelectorAll('.time-slot').forEach(cell => {
+                    const usersInSlot = cell.dataset.users.split("\n").filter(name => name.trim() !== "");
+                    if (usersInSlot.includes(username)) {
+                        slots.push({
+                            day: cell.getAttribute('data-day'),
+                            hour: parseInt(cell.getAttribute('data-hour'), 10)
+                        });
+                    }
+                });
+
+                payload.push({ username, color, slots });
             });
 
-            fetch('/api/availabilities', {
+            fetch('/api/availabilities/bulk', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ groupId, username, color, slots })
+                body: JSON.stringify({ groupId, users: payload })
             })
             .then(response => {
-                if (!response.ok) throw new Error('Failed to save availability');
+                if (!response.ok) throw new Error('Failed to save availabilities');
                 return response.json();
             })
+            .then(data => {
+                document.getElementById("saveStatus").textContent = "Availability saved!";
+                setTimeout(() => {
+                    document.getElementById("saveStatus").textContent = "";
+                }, 3000);
+            })
             .catch(error => {
-                console.error('Error saving availability:', error);
-                alert('Error saving availability.');
+                console.error('Error saving availabilities:', error);
+                alert('Error saving availabilities.');
             });
         }
 
+
+
         function loadAvailabilities() {
             const groupId = getGroupIdFromUrl();
-            const slotCounts = {}; // { "Monday-9": 3, "Tuesday-15": 2, ... }
 
             fetch(`/api/availabilities/${groupId}`)
             .then(res => res.json())
-            .then(availabilities => {
-                availabilities.forEach(entry => {
+            .then(data => {
+                const { users: loadedUsers, slots } = data;
+
+                // Load all users into user list
+                loadedUsers.forEach(user => {
+                    if (!users.some(u => u.name === user.username)) {
+                        users.push({ name: user.username, color: user.color });
+                    }
+                });
+
+                updateUserList(); // Rebuild sidebar people list
+
+                // Load all time slots
+                slots.forEach(entry => {
                     const { username, day, hour, color } = entry;
                     const cell = document.querySelector(`.time-slot[data-day="${day}"][data-hour="${hour}"]`);
 
@@ -484,40 +533,30 @@
                             }
                             userSlot.appendChild(userDiv);
                         }
-
-                        const slotKey = `${day}-${hour}`;
-                        slotCounts[slotKey] = (slotCounts[slotKey] || 0) + 1;
                     }
                 });
-
-                highlightBestSlot(slotCounts);
             })
             .catch(error => {
                 console.error('Error loading availabilities:', error);
             });
         }
 
-        function highlightBestSlot(slotCounts) {
-            let bestSlot = null;
-            let maxUsers = 0;
-
-            // Find the slot with the most users
-            for (const slot in slotCounts) {
-                if (slotCounts[slot] > maxUsers) {
-                    bestSlot = slot;
-                    maxUsers = slotCounts[slot];
-                }
+        document.addEventListener('mouseover', function (e) {
+            if (e.target.classList.contains('user-item')) {
+                const color = e.target.getAttribute('data-color') || '#e6e6e6';
+                e.target.style.backgroundColor = color + "33"; // 33 = light transparency
+                e.target.style.boxShadow = `0 0 10px ${color}`;
+                e.target.style.border = `1px solid ${color}`;
             }
+        });
 
-            if (bestSlot) {
-                const [day, hour] = bestSlot.split("-");
-                const bestCell = document.querySelector(`.time-slot[data-day="${day}"][data-hour="${hour}"]`);
-                if (bestCell) {
-                    bestCell.style.backgroundColor = "#b9fbc0"; // light green
-                    bestCell.style.border = "2px solid #388e3c"; // darker green border
-                }
+        document.addEventListener('mouseout', function (e) {
+            if (e.target.classList.contains('user-item')) {
+                e.target.style.backgroundColor = '';
+                e.target.style.boxShadow = '';
+                e.target.style.border = '';
             }
-        }
+        });
 
 
 
