--- a/public/landing_page.html
+++ b/public/landing_page.html
@@ -32,6 +32,7 @@
 
     .panel {
       flex-direction: row;
+      position: relative;
     }
 
     .hero {
@@ -49,6 +50,7 @@
     .hero p {
       font-size: 1.5rem;
       margin-bottom: 2rem;
+      color: lightgray;
     }
 
     .hero .buttons button {
@@ -61,14 +63,8 @@
     }
 
     .start {
-      background-color: #fff;
+      background-color: lightgray;
       color: #764ba2;
-    }
-
-    .learn {
-      background-color: transparent;
-      border: 2px solid #fff;
-      color: #fff;
     }
 
     .content {
@@ -94,90 +90,167 @@
     }
 
 
-  .hero .buttons button:hover {
-    opacity: 0.85;
-    transform: scale(1.05);
-    transition: all 0.2s ease-in-out;
-  }
+    .hero .buttons button:hover {
+      opacity: 0.85;
+      transform: scale(1.05);
+      transition: all 0.2s ease-in-out;
+    }
 
-  .start:hover {
-    background-color: #eee;
-    color: #5b2cad;
-  }
+    .start:hover {
+      background-color: #eee;
+      color: #5b2cad;
+    }
 
-  .learn:hover {
-    background-color: #fff;
-    color: #5b2cad;
-  }
+    .learn:hover {
+      background-color: #fff;
+      color: #5b2cad;
+    }
 
-  /* Cyberpunk-inspired panel backgrounds */
-  section.panel:nth-of-type(2) {
-    background-color: #0f0f1f; /* Deep violet/black */
-    color: #00fff7; /* Neon cyan text */
-  }
+    /* Cyberpunk-inspired panel backgrounds */
+    section.panel:nth-of-type(2) {
+      background-color: #0f0f1f; /* Deep violet/black */
+      color: #00fff7; /* Neon cyan text */
+    }
 
-  section.panel:nth-of-type(3) {
-    background-color: #1a002b; /* Dark purple */
-    color: #ff00c8; /* Neon pink text */
-  }
+    section.panel:nth-of-type(3) {
+      background-color: #1a002b; /* Dark purple */
+      color: #ff00c8; /* Neon pink text */
+    }
 
-  section.panel:nth-of-type(4) {
-    background-color: #001f1f; /* Dark teal */
-    color: #39ff14; /* Neon green text */
-  }
+    section.panel:nth-of-type(4) {
+      background-color: #001f1f; /* Dark teal */
+      color: #39ff14; /* Neon green text */
+    }
 
-  /* Intense glitch keyframes */
-  @keyframes intenseGlitch {
-    0% {
-      transform: none;
-      clip-path: inset(0 0 0 0);
+    section.panel:nth-of-type(5) {
+      background-color: #12003e; /* Deep Indigo */
+      color: #a46eff; /* Neon Lavender */
     }
-    10% {
-      transform: translate(-2px, -2px) skew(-2deg);
-      clip-path: inset(10% 0 85% 0);
-    }
-    20% {
-      transform: translate(2px, 2px) skew(2deg);
-      clip-path: inset(85% 0 10% 0);
-    }
-    30% {
-      transform: translate(-2px, 1px) skew(-1deg);
-      clip-path: inset(40% 0 50% 0);
-    }
-    40% {
-      transform: translate(1px, -1px) skew(1deg);
-      clip-path: inset(60% 0 25% 0);
-    }
-    50% {
-      transform: none;
-      clip-path: inset(0 0 0 0);
-    }
-    60% {
-      transform: translate(2px, -2px) skew(3deg);
-      clip-path: inset(70% 0 20% 0);
-    }
-    70% {
-      transform: translate(-1px, 2px) skew(-2deg);
-      clip-path: inset(30% 0 50% 0);
-    }
-    80% {
-      transform: translate(0px, 0px);
-      clip-path: inset(0 0 0 0);
-    }
-    100% {
-      transform: none;
-      clip-path: inset(0 0 0 0);
-    }
-  }
 
-  /* Glitch text style */
-  .glitch-text {
-    font-weight: bold;
-    position: relative;
-    display: inline-block;
-    color: #fff;
-    animation: intenseGlitch 1.2s infinite;
-  }
+    /* Intense glitch keyframes */
+    @keyframes intenseGlitch {
+      0% {
+        transform: none;
+        clip-path: inset(0 0 0 0);
+      }
+      10% {
+        transform: translate(-2px, -2px) skew(-2deg);
+        clip-path: inset(10% 0 85% 0);
+      }
+      20% {
+        transform: translate(2px, 2px) skew(2deg);
+        clip-path: inset(85% 0 10% 0);
+      }
+      30% {
+        transform: translate(-2px, 1px) skew(-1deg);
+        clip-path: inset(40% 0 50% 0);
+      }
+      40% {
+        transform: translate(1px, -1px) skew(1deg);
+        clip-path: inset(60% 0 25% 0);
+      }
+      50% {
+        transform: none;
+        clip-path: inset(0 0 0 0);
+      }
+      60% {
+        transform: translate(2px, -2px) skew(3deg);
+        clip-path: inset(70% 0 20% 0);
+      }
+      70% {
+        transform: translate(-1px, 2px) skew(-2deg);
+        clip-path: inset(30% 0 50% 0);
+      }
+      80% {
+        transform: translate(0px, 0px);
+        clip-path: inset(0 0 0 0);
+      }
+      100% {
+        transform: none;
+        clip-path: inset(0 0 0 0);
+      }
+    }
+
+    /* Glitch text style */
+    .glitch-text {
+      font-weight: bold;
+      position: relative;
+      display: inline-block;
+      color: #fff;
+      animation: intenseGlitch 1.2s infinite;
+    }
+
+    .scroll-arrow {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 2.5rem;
+      color: white;
+      cursor: pointer;
+      animation: bounce 1.5s infinite;
+      z-index: 10;
+      opacity: 0.8;
+    }
+
+    .scroll-up-arrow {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+      animation: bounceUp 1.5s infinite;
+      z-index: 10;
+      opacity: 0.85;
+    }
+
+    .scroll-up-arrow svg {
+      width: 100%;
+      height: 100%;
+      fill: white;
+      transition: transform 0.2s ease;
+    }
+
+    .scroll-up-arrow:hover svg {
+      transform: scale(1.2);
+      fill: #39ff14; /* neon green hover */
+    }
+
+    .scroll-arrow:hover {
+      color: #39ff14;
+      font-size: 3rem;
+    }
+
+    @keyframes bounceUp {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-8px);
+      }
+    }
+
+
+    @keyframes bounceUp {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-8px);
+      }
+    }
+
+
+    @keyframes bounce {
+      0%, 100% {
+        transform: translateX(-50%) translateY(0);
+      }
+      50% {
+        transform: translateX(-50%) translateY(10px);
+      }
+    }
+
 
 
 
@@ -189,8 +262,26 @@
     <p>Connect. Share. Succeed.</p>
     <div class="buttons">
       <button class="start" onclick="window.location.href='/login'">Start Here</button>
-      <button class="learn" onclick="scrollToPanel(1)">Learn More</button>
+      <button class="start" onclick="scrollToNext(this)">Learn More</button>
     </div>
+    <div class="scroll-arrow" onclick="scrollToNext(this)">&#x25BC;</div>
+  </section>
+
+  <section class="panel" style="flex-direction: row;">
+    <div class="text">
+      <h2>What is <span class="glitch-text">PeerSphere</span>?</h2>
+      <p>
+        PeerSphere is your collaborative campus hub — a space where students can share resources, 
+        ask and answer questions, and plan study sessions together. 
+        <br><br>
+        Built by students, for students, it turns every massive lecture hall and new course into 
+          a study group family.
+      </p>
+    </div>
+    <div class="image">
+      <video src="/videos/PS-Walkthru-Sped-Up.mp4" autoplay muted loop playsinline style="width: 100%; max-height: 400px; background: black;"></video>
+    </div>
+    <div class="scroll-arrow" onclick="scrollToNext(this)">&#x25BC;</div>
   </section>
 
   <section class="panel" style="flex-direction: row;">
@@ -201,6 +292,7 @@
     <div class="image">
       <img src="/images/collaborate.png" alt="Collaboration" />
     </div>
+    <div class="scroll-arrow" onclick="scrollToNext(this)">&#x25BC;</div>
   </section>
 
   <section class="panel" style="flex-direction: row-reverse;">
@@ -211,6 +303,7 @@
     <div class="image">
       <img src="/images/organize.png" alt="Organize" />
     </div>
+    <div class="scroll-arrow" onclick="scrollToNext(this)">&#x25BC;</div>
   </section>
 
   <section class="panel" style="flex-direction: row;">
@@ -221,13 +314,27 @@
     <div class="image">
       <img src="/images/discuss.png" alt="Discussion" />
     </div>
-  </section>
+    <div class="scroll-up-arrow" onclick="scrollToTop()">
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" viewBox="0 0 24 24">
+        <path d="M12 4l-8 8h6v8h4v-8h6z"/>
+      </svg>
+    </div>  </section>
 
   <script>
-    function scrollToPanel(index) {
-      const panels = document.querySelectorAll(".panel");
-      if (panels[index]) {
-        panels[index].scrollIntoView({ behavior: "smooth" });
+    function scrollToNext(element) {
+      const currentPanel = element.closest('.panel');
+      const allPanels = Array.from(document.querySelectorAll('.panel'));
+      const currentIndex = allPanels.indexOf(currentPanel);
+      const nextPanel = allPanels[currentIndex + 1];
+      if (nextPanel) {
+        nextPanel.scrollIntoView({ behavior: 'smooth' });
+      }
+    }
+
+    function scrollToTop() {
+      const firstPanel = document.querySelector('.hero');
+      if (firstPanel) {
+        firstPanel.scrollIntoView({ behavior: 'smooth' });
       }
     }
   </script>
